# DroneSwarm2D-lib

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
DroneSwarm2D/: __init__.py  cli.py
DroneSwarm2D/assets/: markdown.css
DroneSwarm2D/behaviorsDefault/: behaviors.py
DroneSwarm2D/core/: AirTrafficEnv.py  DemilitarizedZone.py  EnemyDrone.py  FriendDrone.py  InterestPoint.py  __init__.py  settings.py  utils.py
DroneSwarm2D/tools/: create_video.py
analysis/: compare.ipynb  main.py
config/: behavior_cloning_8198_asym.json  benchmark_formation_asym_m.json  default.json
config/preset/: AI_behavior_clone.json  behavior_cloning_8198_asym_m.json  benchmark_formation_asym.json  centralized.json  centralized_asym.json  centralized_asym_m.json  centralized_formation.json  centralized_formation_asym.json  centralized_formation_asym_m.json  debug.json  greedy.json  greedy_asym.json  greedy_asym_m.json  greedy_formation.json  greedy_formation_asym.json  greedy_formation_asym_m.json  joystick.json  proposal.json  proposal_aew_asym.json  proposal_aew_asym_m.json  proposal_aew_formation.json  proposal_aew_formation_asym.json  proposal_aew_formation_asym_m.json  proposal_aew_spread.json  proposal_aew_spread_formation.json  proposal_asym.json  proposal_asym_m.json  proposal_formation.json  proposal_formation_asym.json  proposal_formation_asym_m.json  proposal_ia.json  proposal_spread.json  proposal_spread_formation.json
example/src/: behaviors.py  config.json  main.py
old_DroneSwarm2D/: __init__.py  __main__.py  cli.py
old_DroneSwarm2D/behaviorsDefault/: __init__.py
old_DroneSwarm2D/core/: EnemyDrone.py  (+7 more)
tools/: __init__.py  compare.ipynb  compare.py  create_gif.py  create_video.py  fsm.py  generate_images.ipynb  merge_gif.py  merge_video.py  poc.ipynb  poc.py  view_enemy_behavior.py  view_multi_enemy_behavior.py
(+45 files in other folders)
